<resources>
    <string name="app_name">Daily Shopping</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="password">Password</string>
    <string name="signup_text">Don\'t have an account? Sign up here</string>
    <string name="signin_text">Have an account? Sign in here</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="toolbar">Daily Shopping List</string>
    <string name="total_amount">Total Amount:</string>
    <string name="text_amount">000</string>
    <string name="add_shopping">Add Shopping</string>
    <string name="type">Type</string>
    <string name="amount">Amount:</string>
    <string name="note">Note:</string>
    <string name="save">Save</string>
    <string name="date">16 Sep, 2019</string>
    <string name="title">Title</string>
    <string name="notes">Note</string>
    <string name="amounts">5000</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="update_delete">Update / Delete</string>
    <string name="logout">Logout</string>
</resources>
