<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/back_design">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceLarge"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:maxLines="1"
                android:background="@drawable/ed_design"
                android:padding="10dp"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:id="@+id/email_login"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ed_design"
                android:padding="10dp"
                android:hint="@string/password"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:id="@+id/password"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:background="@drawable/ed_design"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceMedium"
                android:id="@+id/login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/signup_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/sign_up"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>